Added comment and follow models. Added comment into post detail template. Starting make views for follow/unfolow activity.

--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -31,7 +31,7 @@
         <li class="nav-item"> 
           <a class="nav-link link-light" href="{% url 'users:logout' %}">Выйти</a>
         </li>
-        <li>
+        <li class="nav-link link-dark">
           Пользователь: {{ user.username }}
         </li>
         {% else %}
