--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,10 +1,14 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% load static %}
 {% block title%}Последние обновления на сайте{% endblock %}
 
 {% block content %}
   <div class="container py-5">
     <h1>Последнее обновление на сайте</h1>
+    {% load cache %}
+    {% cache 20 sidebar %}
+    {% include 'posts/includes/switcher.html' %}
     {% for post in page_obj %}
       <ul>
         <li>
@@ -14,6 +18,9 @@
           Дата публикации: {{ post.pub_date|date:"d E Y" }}
         </li>
       </ul>
+      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+        <img class="card-img my-2" src="{{ im.url }}">
+      {% endthumbnail %}
       <p>{{ post.text|linebreaks }}</p>
       {% if post.group %}
         <a href="{% url 'posts:group_list' post.group.slug %}">
@@ -22,7 +29,7 @@
       {% endif %}
       {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
-
+    {% endcache %}
     {% include 'posts/includes/paginator.html' %}
 
   </div>
