--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% load static %}
 
 {% block title %}Профайл пользователя {{ author.first_name }}{% endblock %}
@@ -6,6 +7,21 @@
   <div class="container py-5">
     <h1>Все посты пользователя {{ author.first_name }} </h1>
     <h3>Всего постов: {{ author.posts.count }} </h3>
+    {% if following %}
+    <a
+      class="btn btn-lg btn-light"
+      href="{% url 'posts:profile_unfollow' author.username %}" role="button"
+    >
+      Отписаться
+    </a>
+  {% else %}
+      <a
+        class="btn btn-lg btn-primary"
+        href="{% url 'posts:profile_follow' author.username %}" role="button"
+      >
+        Подписаться
+      </a>
+   {% endif %}
     {% for post in page_obj %}
       <article>
         <ul>
@@ -13,6 +29,9 @@
             Дата публикации: {{ post.pub_date|date:"d E Y" }}
           </li>
         </ul>
+        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+          <img class="card-img my-2" src="{{ im.url }}">
+        {% endthumbnail %}
         <p>
           {{ post.text|linebreaksbr }}
         </p>
